--- a/dev/main.html
+++ b/dev/main.html
@@ -32,7 +32,7 @@
 		<section class="main" id="main">
 			<div class="main__box d-flex">
 				<a href="#" class="back">
-					<img src="/img/back.svg" alt="" class="svg">
+					<img src="img/back.svg" alt="" class="svg">
 				</a>
 				<div class="main-left">
 					<div class="main-left__top">
@@ -42,7 +42,7 @@
 							</a>
 							<div class="mm">
 								<a href="#" class="main-left__create btn menu-btn2 btn_2">
-									<img src="/img/plus.svg" alt="" class="svg">
+									<img src="img/plus.svg" alt="" class="svg">
 									Создать
 								</a>
 								<div class="menu2">
@@ -59,7 +59,7 @@
 							<ul class="main-left__list">
 								<li class="main-left__li active">
 									<a href="#">
-										<img src="/img/a1.svg" alt="" class="svg">
+										<img src="img/a1.svg" alt="" class="svg">
 										<p>
 											Мои генерации
 										</p>
@@ -67,7 +67,7 @@
 								</li>
 								<li class="main-left__li">
 									<a href="#">
-										<img src="/img/a2.svg" alt="" class="svg">
+										<img src="img/a2.svg" alt="" class="svg">
 										<p>
 											Новости
 										</p>
@@ -75,7 +75,7 @@
 								</li>
 								<li class="main-left__li">
 									<a href="#">
-										<img src="/img/a3.svg" alt="" class="svg">
+										<img src="img/a3.svg" alt="" class="svg">
 										<p>
 											FAQ
 										</p>
@@ -83,7 +83,7 @@
 								</li>
 								<li class="main-left__li">
 									<a href="#">
-										<img src="/img/a4.svg" alt="" class="svg">
+										<img src="img/a4.svg" alt="" class="svg">
 										<p>
 											Тарифы
 										</p>
@@ -95,10 +95,10 @@
 					<div class="main-left__bottom">
 						<div class="main-left__socials d-flex">
 							<a href="#" class="main-left__link" target="blank">
-								<img src="/img/soc1.svg" alt="">
+								<img src="img/soc1.svg" alt="">
 							</a>
 							<a href="#" class="main-left__link" target="blank">
-								<img src="/img/soc2.svg" alt="">
+								<img src="img/soc2.svg" alt="">
 							</a>
 						</div>
 
@@ -112,7 +112,7 @@
 							© GetBrand™ 2023
 						</p>
 					</div>
-					<img src="/img/bg.png" alt="" class="bg">
+					<img src="img/bg.png" alt="" class="bg">
 				</div>
 				<div class="main-right">
 					<div class="menu-btn" id="menu-btn">
@@ -126,7 +126,7 @@
 								Привет, <span>{username}!</span>
 							</p>
 							<a href="#" class="main-right__enter btn btn_2">
-								<img src="/img/enter.svg" alt="" class="svg">
+								<img src="img/enter.svg" alt="" class="svg">
 								Выйти
 							</a>
 						</div>
@@ -140,7 +140,7 @@
 						</div>
 						<div class="mm">
 							<a href="#" class="main-left__create btn menu-btn3 btn_2">
-								<img src="/img/plus.svg" alt="" class="svg">
+								<img src="img/plus.svg" alt="" class="svg">
 								Создать
 							</a>
 							<div class="menu3">
@@ -157,7 +157,7 @@
 						<ul class="main-left__list">
 							<li class="main-left__li active">
 								<a href="#">
-									<img src="/img/a1.svg" alt="" class="svg">
+									<img src="img/a1.svg" alt="" class="svg">
 									<p>
 										Мои генерации
 									</p>
@@ -165,7 +165,7 @@
 							</li>
 							<li class="main-left__li">
 								<a href="#">
-									<img src="/img/a2.svg" alt="" class="svg">
+									<img src="img/a2.svg" alt="" class="svg">
 									<p>
 										Новости
 									</p>
@@ -173,7 +173,7 @@
 							</li>
 							<li class="main-left__li">
 								<a href="#">
-									<img src="/img/a3.svg" alt="" class="svg">
+									<img src="img/a3.svg" alt="" class="svg">
 									<p>
 										FAQ
 									</p>
@@ -181,7 +181,7 @@
 							</li>
 							<li class="main-left__li">
 								<a href="#">
-									<img src="/img/a4.svg" alt="" class="svg">
+									<img src="img/a4.svg" alt="" class="svg">
 									<p>
 										Тарифы
 									</p>
@@ -207,13 +207,13 @@
 								Привет, <span>{username}!</span>
 							</p>
 							<a href="#" class="main-right__enter btn btn_2">
-								<img src="/img/enter.svg" alt="" class="svg">
+								<img src="img/enter.svg" alt="" class="svg">
 								Выйти
 							</a>
 						</div>
 					</div>
 					<div class="main__content">
-						<img src="/img/yandex.png" alt="" class="main__yandex">
+						<img src="img/yandex.png" alt="" class="main__yandex">
 						<div class="main__flex d-flex">
 							<div class="main__wrap">
 								<p class="main__title">
@@ -240,7 +240,7 @@
 												</td>
 												<td class="active">
 													<a href="#" class="main__load">
-														<img src="/img/down.svg" alt="" class="svg">
+														<img src="img/down.svg" alt="" class="svg">
 														Скачать
 													</a>
 												</td>
@@ -255,7 +255,7 @@
 												</td>
 												<td class="active">
 													<a href="#" class="main__load">
-														<img src="/img/down.svg" alt="" class="svg">
+														<img src="img/down.svg" alt="" class="svg">
 														Скачать
 													</a>
 												</td>
@@ -270,7 +270,7 @@
 												</td>
 												<td class="active">
 													<a href="#" class="main__load">
-														<img src="/img/down.svg" alt="" class="svg">
+														<img src="img/down.svg" alt="" class="svg">
 														Скачать
 													</a>
 												</td>
@@ -285,7 +285,7 @@
 												</td>
 												<td class="active">
 													<a href="#" class="main__load">
-														<img src="/img/down.svg" alt="" class="svg">
+														<img src="img/down.svg" alt="" class="svg">
 														Скачать
 													</a>
 												</td>
@@ -300,7 +300,7 @@
 												</td>
 												<td class="active">
 													<a href="#" class="main__load">
-														<img src="/img/down.svg" alt="" class="svg">
+														<img src="img/down.svg" alt="" class="svg">
 														Скачать
 													</a>
 												</td>
